feat: Access logs page
